# lucid-spell

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml
src/: bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs
src/app/: App.tsx
src/app/consts/: defaultStoresValues.ts  pages.tsx  prompts.ts
src/app/contexts/: PageContext.tsx  UserMetaContext.tsx
src/app/helpers/: sortDictionaries.ts
src/app/hooks/: useLoadTheme.ts  useShowWindow.ts
src/app/stores/: dictionariesStore.ts  favoritesStore.ts  userMetaStore.ts
src/app/styles/: index.css
src/app/types/: AppSettings.ts  Dictionary.ts  UserMeta.ts
src/components/AppBar/: AppBarActions.tsx
src/components/Navigation/: Navigation.tsx
src/components/Outlet/: Outlet.tsx
src/components/ui/: ShortcutInput.tsx  dialog.tsx
src/pages/DictionariesPage/: index.ts
src/pages/DictionariesPage/components/: DictionariesBarActions.tsx  DictionariesPage.tsx  ViewOutlet.tsx
src/pages/DictionariesPage/consts/: Separators.ts
src/pages/DictionariesPage/contexts/: DictionariesViewContext.tsx
src/pages/DictionariesPage/helpers/: getPairsPreview.ts
src/pages/DictionariesPage/hooks/: useDictionariesView.ts
src/pages/DictionariesPage/types/: separators.ts
src/pages/SettingsPage/components/: SettingsBarActions.tsx  SettingsList.tsx
src/pages/TranslatorPage/components/: ChooseDictDialog.tsx  ChooseDictDiolog.tsx  (+5 more)
(+23 files in other folders)
